--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
   "name": "notes",
+  "homepage": "https://r34son.github.io/notesv2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
+    "@vkontakte/icons": "^1.12.0",
+    "gh-pages": "^2.1.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-loader-spinner": "^3.1.5",
+    "react-mic": "^12.4.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-share": "^3.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
